Fix name & description in config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-title: Disclose DREAL PACA Scraper
-description: Custom scraper for paca.developpement-durable.gouv.fr
+title: Disclose DREAL ARA Scraper
+description: Custom scraper for auvergne-rhone-alpes.developpement-durable.gouv.fr
 instructions: ''
 type: object
 properties:
